--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "repository": "https://github.com/mcpeblocker/gr-helper-bot.git",
   "author": "mcpeblocker <mcpeblocker@gmail.com>",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "env-var": "^7.0.1",
+    "grammy": "^1.3.3"
+  },
   "devDependencies": {
     "nodemon": "^2.0.13",
     "ts-node": "^10.2.1",
